BUILDER5_FILES = \
	builder5/liberror.bpf \
	builder5/liberror.bpr \
	builder5/libbfio.bpf \
	builder5/libbfio.bpr \
	builder5/libewf.bpg \
	builder5/libewf_dynamic.bpr \
	builder5/libewf_dynamic.bpf \
	builder5/libewf_static.bpf \
	builder5/libewf_static.bpr \
	builder5/libuna.bpf \
	builder5/libuna.bpr \
	builder5/zlib.bpf \
	builder5/zlib.bpr \
	builder5/Example.bpr \
	builder5/Example.bpf \
	builder5/EWFaccess_dynamic.bpr \
	builder5/EWFaccess_dynamic.bpf \
	builder5/EWFaccess_static.bpr \
	builder5/EWFaccess_static.bpf

CODEGEAR_FILES = \
	codegear/liberror.cbproj \
	codegear/libewf.groupproj \
	codegear/libewf_dynamic.cbproj \
	codegear/libewf_static.cbproj \
	codegear/libuna.cbproj \
	codegear/zlib.cbproj \
	codegear/ewfacquire.cbproj \
	codegear/ewfacquirestream.cbproj \
	codegear/ewfalter.cbproj \
	codegear/ewfexport.cbproj \
	codegear/ewfinfo.cbproj \
	codegear/ewfverify.cbproj \
	codegear/Example.cbproj \
	codegear/EWFaccess_dynamic.cbproj \
	codegear/EWFaccess_static.cbproj

EWFCLASS_FILES = \
	ewfclass/Example.cpp \
	ewfclass/EWFaccess.cpp \
	ewfclass/EWFaccess.h

EXTRA_DIST = \
	$(BUILDER5_FILES) \
	$(CODEGEAR_FILES) \
	$(EWFCLASS_FILES)

distclean: clean
	/bin/rm -f Makefile

