CODEGEAR_FILES = \
	codegear/libbfio/libbfio.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libfdatetime/libfdatetime.cbproj \
	codegear/libfmapi/libfmapi.cbproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libewf/libewf.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libewf.groupproj \
	codegear/libsystem/libsystem.cbproj \
	codegear/ewfexport/ewfexport.cbproj \
	codegear/ewfinfo/ewfinfo.cbproj \
	codegear/ewfverify/ewfverify.cbproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

distclean: clean
	/bin/rm -f Makefile

