CODEGEAR_FILES = \
	codegear/ewfacquire/ewfacquire.cbproj \
	codegear/ewfacquirestream/ewfacquirestream.cbproj \
	codegear/ewfexport/ewfexport.cbproj \
	codegear/ewfinfo/ewfinfo.cbproj \
	codegear/ewfverify/ewfverify.cbproj \
	codegear/libbfio/libbfio.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libewf/libewf.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libewf.groupproj \
	codegear/libsystem/libsystem.cbproj \
	codegear/zlib/zlib.cbproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

distclean: clean
	/bin/rm -f Makefile

