BUILDER5_FILES = \
	builder5/ewfacquire/ewfacquire.bpf \
	builder5/ewfacquire/ewfacquire.bpr \
	builder5/ewfacquirestream/ewfacquirestream.bpf \
	builder5/ewfacquirestream/ewfacquirestream.bpr \
	builder5/ewfexport/ewfexport.bpf \
	builder5/ewfexport/ewfexport.bpr \
	builder5/ewfinfo/ewfinfo.bpf \
	builder5/ewfinfo/ewfinfo.bpr \
	builder5/ewfverify/ewfverify.bpf \
	builder5/ewfverify/ewfverify.bpr \
	builder5/libbfio/libbfio.bpf \
	builder5/libbfio/libbfio.bpr \
	builder5/liberror/liberror.bpf \
	builder5/liberror/liberror.bpr \
	builder5/libewf/libewf.bpf \
	builder5/libewf/libewf.bpr \
	builder5/libewf.bpg \
	builder5/libnotify/libnotify.bpf \
	builder5/libnotify/libnotify.bpr \
	builder5/libsmdev/libsmdev.bpf \
	builder5/libsmdev/libsmdev.bpr \
	builder5/libsmraw/libsmraw.bpf \
	builder5/libsmraw/libsmraw.bpr \
	builder5/libsystem/libsystem.bpf \
	builder5/libsystem/libsystem.bpr \
	builder5/libuna/libuna.bpf \
	builder5/libuna/libuna.bpr \
	builder5/Release \
	builder5/zlib/zlib.bpf \
	builder5/zlib/zlib.bpr

CODEGEAR_FILES = \
	codegear/ewfacquire/ewfacquire.cbproj \
	codegear/ewfacquirestream/ewfacquirestream.cbproj \
	codegear/ewfexport/ewfexport.cbproj \
	codegear/ewfinfo/ewfinfo.cbproj \
	codegear/ewfverify/ewfverify.cbproj \
	codegear/libbfio/libbfio.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libewf/libewf.cbproj \
	codegear/libewf.groupproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libsmdev/libsmdev.cbproj \
	codegear/libsmraw/libsmraw.cbproj \
	codegear/libsystem/libsystem.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/zlib/zlib.cbproj

EXTRA_DIST = \
	$(BUILDER5_FILES) \
	$(CODEGEAR_FILES)

distclean: clean
	/bin/rm -f Makefile

