BUILDER5_FILES = \
	builder5/ewfacquire/ewfacquire.bpf \
	builder5/ewfacquire/ewfacquire.bpr \
	builder5/ewfacquirestream/ewfacquirestream.bpf \
	builder5/ewfacquirestream/ewfacquirestream.bpr \
	builder5/ewfexport/ewfexport.bpf \
	builder5/ewfexport/ewfexport.bpr \
	builder5/ewfinfo/ewfinfo.bpf \
	builder5/ewfinfo/ewfinfo.bpr \
	builder5/ewfverify/ewfverify.bpf \
	builder5/ewfverify/ewfverify.bpr \
	builder5/libbfio/libbfio.bpf \
	builder5/libbfio/libbfio.bpr \
	builder5/libcstring/libcstring.bpf \
	builder5/libcstring/libcstring.bpr \
	builder5/liberror/liberror.bpf \
	builder5/liberror/liberror.bpr \
	builder5/libewf/libewf.bpf \
	builder5/libewf/libewf.bpr \
	builder5/libewf.bpg \
	builder5/libfvalue/libfvalue.bpf \
	builder5/libfvalue/libfvalue.bpr \
	builder5/libhmac/libhmac.bpf \
	builder5/libhmac/libhmac.bpr \
	builder5/libmfdata/libmfdata.bpf \
	builder5/libmfdata/libmfdata.bpr \
	builder5/libnotify/libnotify.bpf \
	builder5/libnotify/libnotify.bpr \
	builder5/libodraw/libodraw.bpf \
	builder5/libodraw/libodraw.bpr \
	builder5/libsmdev/libsmdev.bpf \
	builder5/libsmdev/libsmdev.bpr \
	builder5/libsmraw/libsmraw.bpf \
	builder5/libsmraw/libsmraw.bpr \
	builder5/libsystem/libsystem.bpf \
	builder5/libsystem/libsystem.bpr \
	builder5/libuna/libuna.bpf \
	builder5/libuna/libuna.bpr \
	builder5/Release \
	builder5/zlib/zlib.bpf \
	builder5/zlib/zlib.bpr

CODEGEAR_FILES = \
	codegear/ewfacquire/ewfacquire.cbproj \
	codegear/ewfacquire/ewfacquire_static.cbproj \
	codegear/ewfacquirestream/ewfacquirestream.cbproj \
	codegear/ewfacquirestream/ewfacquirestream_static.cbproj \
	codegear/ewfexport/ewfexport.cbproj \
	codegear/ewfexport/ewfexport_static.cbproj \
	codegear/ewfinfo/ewfinfo.cbproj \
	codegear/ewfinfo/ewfinfo_static.cbproj \
	codegear/ewfverify/ewfverify.cbproj \
	codegear/ewfverify/ewfverify_static.cbproj \
	codegear/libbfio/libbfio.cbproj \
	codegear/libcstring/libcstring.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libewf/libewf.cbproj \
	codegear/libewf/libewf_static.cbproj \
	codegear/libewf.groupproj \
	codegear/libewf_static.groupproj \
	codegear/libfvalue/libfvalue.cbproj \
	codegear/libhmac/libhmac.cbproj \
	codegear/libmfdata/libmfdata.cbproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libodraw/libodraw.cbproj \
	codegear/libsmdev/libsmdev.cbproj \
	codegear/libsmraw/libsmraw.cbproj \
	codegear/libsystem/libsystem.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/zlib/zlib.cbproj \
	codegear/zlib/zlib_static.cbproj

EXTRA_DIST = \
	$(BUILDER5_FILES) \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

