CODEGEAR_FILES = \
	codegear/ewfacquire/ewfacquire.cbproj \
	codegear/ewfacquire/ewfacquire_static.cbproj \
	codegear/ewfacquirestream/ewfacquirestream.cbproj \
	codegear/ewfacquirestream/ewfacquirestream_static.cbproj \
	codegear/ewfexport/ewfexport.cbproj \
	codegear/ewfexport/ewfexport_static.cbproj \
	codegear/ewfinfo/ewfinfo.cbproj \
	codegear/ewfinfo/ewfinfo_static.cbproj \
	codegear/ewfrecover/ewfrecover.cbproj \
	codegear/ewfrecover/ewfrecover_static.cbproj \
	codegear/ewfverify/ewfverify.cbproj \
	codegear/ewfverify/ewfverify_static.cbproj \
	codegear/libbfio/libbfio.cbproj \
	codegear/libcaes/libcaes.cbproj \
	codegear/libcdata/libcdata.cbproj \
	codegear/libcerror/libcerror.cbproj \
	codegear/libcfile/libcfile.cbproj \
	codegear/libclocale/libclocale.cbproj \
	codegear/libcnotify/libcnotify.cbproj \
	codegear/libcpath/libcpath.cbproj \
	codegear/libcsplit/libcsplit.cbproj \
	codegear/libcstring/libcstring.cbproj \
	codegear/libcsystem/libcsystem.cbproj \
	codegear/libewf/libewf.cbproj \
	codegear/libewf/libewf_static.cbproj \
	codegear/libewf.groupproj \
	codegear/libewf_static.groupproj \
	codegear/libfcache/libfcache.cbproj \
	codegear/libfvalue/libfvalue.cbproj \
	codegear/libhmac/libhmac.cbproj \
	codegear/libmfdata/libmfdata.cbproj \
	codegear/libodraw/libodraw.cbproj \
	codegear/libsmdev/libsmdev.cbproj \
	codegear/libsmraw/libsmraw.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/zlib/zlib.cbproj \
	codegear/zlib/zlib_static.cbproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

