EXTRA_DIST = \
	ewf.net_datetime.cpp ewf.net_datetime.h \
	ewf.net_definitions.h \
	ewf.net_file_entry.cpp ewf.net_file_entry.h \
	ewf.net_handle.cpp ewf.net_handle.h \
	ewf.net_sector_range.cpp ewf.net_sector_range.h \
	ewf.net_support.cpp ewf.net_support.h \
	ewf.net.rc \
	ewf.net.rc.in

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

